--- a/src/main/resources/templates/admin/indexAdmin.html
+++ b/src/main/resources/templates/admin/indexAdmin.html
@@ -1,25 +1,101 @@
 <!DOCTYPE html>
-<html>
+<html data-bs-theme="dark">
 
 <head>
 	<title>
-		SiwMovie - Homepage
+		SiwMovie - Amministratore
 	</title>
-	<link rel="stylesheet" href="/css/stile.css" />
+	<link rel="stylesheet" href="/css/stile2.css" />
+</head>
+
+<!DOCTYPE html>
+<html>
+
+<head>
+	<title>Film</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 
 <body>
-	<header>
-		<div th:if="${#request.userPrincipal}">
-			<span th:text="${#request.userPrincipal.principal.username}"></span>
-			<a href="/logout">Logout</a>
-		</div>
-		<div th:unless="${#request.userPrincipal}">
-			<a href="/login">Login</a>
-		</div>
-	</header>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+		crossorigin="anonymous"></script>
+	<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
 
-	<div><img src="/images/logo-siw.png" width="50%" /></div>
+		<div class="container-fluid" style="max-width: 1500px;">
+			<a class="navbar-brand" href="/">SiwMovie</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+				aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarScroll">
+				<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="/">Home</a>
+					</li>
+
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+							aria-expanded="false">
+							FIlm
+						</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="/movies">Tutti i Film</a></li>
+							<li>
+								<hr class="dropdown-divider">
+							</li>
+							<li><a class="dropdown-item" href="#">Azione</a></li>
+							<li><a class="dropdown-item" href="#">Horror</a></li>
+						</ul>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/artists">Artisti</a>
+					</li>
+				</ul>
+
+				<form class="d-flex flex-grow-1" th:action="@{/searchMovies}" method="post"
+					style="margin-right: 100px; ">
+					<input class="form-control me-2" th:value="${year}" name="year" type="search"
+						placeholder="Cerca un film!" aria-label="Search">
+					<button class="btn btn-outline-success" type="submit">Cerca</button>
+				</form>
+				<div th:if="${#request.userPrincipal}" style="margin-left: 10%;">
+					<span>Ciao, </span>
+					<span th:text="${#request.userPrincipal.principal.username}"> </span>
+					<button class="btn btn-outline-success" type="submit"><a id="loginbutton"
+							href="/logout">Logout</a></button>
+				</div>
+				<div th:unless="${#request.userPrincipal}">
+					<button class="btn btn-outline-success" type="submit"><a id="loginbutton"
+							href="/login">Login</a></button>
+				</div>
+			</div>
+
+		</div>
+	</nav>
+	<div class="container my-5 ">
+		<div class="container" id="siwimage"><img class="img-fluid" src="/images/logo-siw.png" /></div>
+		<div class="container my-5 rounded-pill" style="background-color: #323436">
+			<h1 style="text-align:center">Pannello di Controllo Amministratore</h1>
+			<div class="d-flex flex-row mb-3">
+				<div class="d-flex flex-column mb-3">
+					<div class="p-2"></div>
+					<div class="p-2">Flex item 2</div>
+					<div class="p-2">Flex item 3</div>
+				</div>
+				<div class="d-flex flex-column mb-3">
+					<div class="p-2"></div>
+					<div class="p-2">Flex item 2</div>
+					<div class="p-2">Flex item 3</div>
+				</div>
+			</div>
+
+		</div>
+	</div>
+
 	<h1>Consulta l'archivio</h1>
 	<div>
 		<a href="/movie">Elenco Film</a>
