--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -66,7 +66,7 @@
   </nav>
 
   <div class="container my-5">
-	<div class="container" id="siwimage"><img class="img-fluid" src="/images/logo-siw.png" style=""/></div>
+	<div class="container" id="siwimage"><img class="img-fluid" src="/images/logo-siw.png"/></div>
 	<h1 class="text-center">I migliori 3!</h1>
 	
 	<div th:if="${!movies.isEmpty()}" class="container my-3">
@@ -83,7 +83,8 @@
 			  </div>
 			</div>
 		  </div>
-	  </div>	  
+	  </div>	
+	</div>  
 	  
 </body>
 
