--- a/src/main/resources/templates/foundMovies.html
+++ b/src/main/resources/templates/foundMovies.html
@@ -45,6 +45,9 @@
 		  <li class="nav-item">
 			<a class="nav-link" href="/artists" >Artisti</a>
 		  </li>
+		  <li class="nav-item" th:if="${isAdmin}">
+			<a class="nav-link" href="/success">Pannello di controllo </a>
+			</li>
 		</ul>
 		
 		<form class="d-flex flex-grow-1" th:action="@{/searchMovies}" method="post"  style="margin-right: 100px; ">
@@ -65,7 +68,7 @@
   </nav>
 
   <div class="container my-5">
-	<div class="container" id="siwimage"><img class="img-fluid" src="/images/logo-siw.png" style=""/></div>
+	<div class="container" id="siwimage"><img class="img-fluid" src="/images/logo-siw.png" /></div>
 	
 	<div th:if="${!movies.isEmpty()}" class="container my-3">
 		<div class="row">
