--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -46,6 +46,9 @@
 		  <li class="nav-item">
 			<a class="nav-link" href="/artists" >Artisti</a>
 		  </li>
+		  <li class="nav-item" th:if="${isAdmin}">
+			<a class="nav-link" href="/success">Pannello di controllo </a>
+			</li>
 		</ul>
 		
 		<form class="d-flex flex-grow-1" th:action="@{/searchMovies}" method="post"  style="margin-right: 100px; ">
