--- a/src/main/resources/templates/admin/formUpdateMovie.html
+++ b/src/main/resources/templates/admin/formUpdateMovie.html
@@ -76,8 +76,21 @@
 	<div class="container my-5" id="movie">
 		<div class="flex-container-orizzontale">
 			<div class="flex-container-verticale">
-				<h1 th:text="${movie.title}">Up!</h1>
-	  			<h5 th:text="${movie.year}">2001</h5>
+				<div class="d-flex align-items-end">
+					<h1 th:text="${movie.title}">Up!</h1>
+					<a data-bs-toggle="modal" data-bs-target="#titleModal" class="clickable-link">
+						<h5>Modifica</h5>
+					</a>
+					
+				</div>
+				
+				
+				<div class="d-flex align-items-end">
+					<h1 th:text="${movie.year}">2001</h1>
+					<a data-bs-toggle="modal" data-bs-target="#yearModal" class="clickable-link">
+						<h5>Modifica</h5>
+					</a>
+				</div>
 			</div>
 			<div class="flex-container-verticale c" style="margin-left: auto; padding-right: 2%;" >
 				<h3>Valutazione</h3>
@@ -241,6 +254,58 @@
 	</div>
   </div>
 
+  <div class="modal fade" id="titleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+	  <div class="modal-content">
+		<div class="modal-header">
+		  <h1 class="modal-title fs-5" id="exampleModalLabel">Modifica Titolo</h1>
+		  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+		</div>
+		<div class="modal-body">
+		  <form th:action="@{/updateTitle}" method="POST">
+			<div class="mb-3">
+			  <label for="recipient-name" class="col-form-label">Nuovo Titolo</label>
+			  <input type="text" class="form-control" id="recipient-name" name="newTitle">
+			</div>
+			<div class="mb-3">
+				<input type="text" class="form-control visually-hidden" id="recipient-name" th:value="${movie.id}" name="movieId">
+			  </div>
+			<button type="submit" class="btn btn-primary">Aggiorna Titolo</button>
+		  </form>
+		</div>
+		<div class="modal-footer">
+		  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
+		  
+		</div>
+	  </div>
+	</div>
+  </div>
+  <div class="modal fade" id="yearModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+	  <div class="modal-content">
+		<div class="modal-header">
+		  <h1 class="modal-title fs-5" id="exampleModalLabel">Modifica Anno</h1>
+		  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+		</div>
+		<div class="modal-body">
+		  <form th:action="@{/updateYear}" method="POST">
+			<div class="mb-3">
+			  <label for="recipient-name" class="col-form-label">Nuovo Anno</label>
+			  <input type="text" class="form-control" id="recipient-name" name="newYear">
+			</div>
+			<div class="mb-3">
+				<input type="text" class="form-control visually-hidden" id="recipient-name" th:value="${movie.id}" name="movieId">
+			  </div>
+			<button type="submit" class="btn btn-primary">Aggiorna Anno</button>
+		  </form>
+		</div>
+		<div class="modal-footer">
+		  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
+		  
+		</div>
+	  </div>
+	</div>
+  </div>
     
   </body>
 </html>
